Fix spacing of icons

--- a/frontend/extension/styles.css
+++ b/frontend/extension/styles.css
@@ -32,6 +32,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-top: .5em;
 }
 
 .radio-group input[type="radio"] {
